# aoc2020

./: .gitignore  Makefile  aocgen  baggage-test-data.txt  pyproject.toml  requirements.txt  setup.py  validate.py
aoc/: __init__.py  adapters.py  baggage.py  boardingpass.py  bus.py  customforms.py  day_04_passportscanner.py  day_05_boardingpass-mini.py  day_05_boardingpass.py  day_06_customforms.py  day_07_baggage.py  day_09_xmascypher.py  day_10_adapters.py  day_11_seats.py  day_13_bus.py  day_14_bitmask.py  day_15_numsgame.py  day_16_tickets.py  day_17_conwaycubes.py  day_18_evalexp.py  day_19_validmsgs.py  day_20_imgtiles.py  day_21_allergen.py  expenses.py  gamecomp.py  passportscanner.py  seats.py  ship.py  trees.py  validate.py  xmascypher.py
friends/: README.md  bronner-day-16.py  dandiez-day-20.py  top-day-15.py
resources/: day_19_validmsgs-data.txt
test/: test-adapters.py  test-baggage.py  test-boardingpass.py  test-bus.py  test-customforms.py  test-expenses.py  test-gamecomp.py  test-passportscanner.py  test-seats.py  test-ship.py  test-trees.py  test-util.py  test-validate.py  test-xmascypher.py  test_day_01_expenses.py  test_day_02_validate.py  test_day_03_trees.py  test_day_04_passportscanner.py  test_day_05_boardingpass.py  test_day_06_customforms.py  test_day_07_baggage.py  test_day_08_gamecomp.py  test_day_09_xmascypher.py  test_day_10_adapters.py  test_day_11_seats.py  test_day_12_ship.py  test_day_13_bus.py  test_day_14_bitmask.py  test_day_15_numsgame.py  test_day_16_tickets.py  test_day_17_conwaycubes.py  test_day_18_evalexp.py  (+3 more)
(+6 files in other folders)
