[tool.poetry]
name = "aoc2020"
version = "1.0.0"
description = "Advent of Code 2020 exercises"
authors = ["Your Name <you@example.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
